# carrotlib

./: .gitignore  .gitmodules  CMakeLists.txt  ImGuiExample.js  ImGuiExample.wasm  README.md  README_CN.md  build_ios.sh  build_web.sh  compile_flags.txt  index.html  pyrightconfig.json  requirements.txt
3rd/: CMakeLists.txt  versions.txt
3rd/box2d/: CMakeLists.txt
3rd/box2d/include/: box2dw.hpp
3rd/box2d/src/: box2d_World.cpp
3rd/naett/: CMakeLists.txt
3rd/naett/include/: naett.h  naettw.hpp
3rd/naett/src/: naett.c  naettw.cpp
3rd/rlImGui/: rlImGui.cpp  rlImGui.h
android/: .gitignore  build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt
examples/01_HelloWorld/: .gitignore  main.py
examples/TimeStone/: .gitignore  main.py
examples/TimeStone/timestone/: g.py
examples/TimeStone/timestone/actors/: base.py  hero.py
examples/TimeStone/timestone/common/: camera.py
examples/TimeStone/timestone/levels/: __init__.py  demo.py
include/: appw.hpp  assets.hpp  box2dw.hpp  imguiw.hpp  light.hpp  raylibw.hpp
include/typings/: _carrotlib.pyi  box2d.pyi  imgui.pyi  naett.pyi  raylib.pyi
playground/: __main__.py
playground/backend/: __init__.py  base.py  build.py  config.py  framework.py  mobile.py  platform.py  project.py  threading_task.py  tinymongo.py
pocketpy/: Makefile  cmake_install.cmake
pocketpy/3rd/box2d/: Makefile  cmake_install.cmake
scripts/: prebuild.py  precompile.py  sync_template.py
scripts/private/: gen_imgui_pyi.py  loc.py  parse_undefined_symbols.py
src/: appw.cpp  box2dw.cpp  light.cpp  main.cpp
template/carrotlib/: __init__.py  _animation.py  _colors.py  _constants.py  _debug.py  _event.py  _font.py  _light.py  _material.py  _math.py  _node.py  _renderer.py  _resources.py  _setup.py  _sound.py  _tilemap.py  _tween.py  _viewport.py  array2d.py  controls.py  debug.py  g.py  logger.py  math.py  nodes.py  random.py
template/carrotlib/assets/shaders/: diffuse.frag  diffuse.vert  pure_color.frag  unlit.frag  unlit.vert
template/carrotlib/ldtk/: layer.py  perlin.py  project.py
template/carrotlib/ldtk/defs/: layer.py  rule.py  tileset.py
template/carrotlib/nodes/: __init__.py  _misc.py  _sprite.py  _tilemap.py  particles.py
template/dungeon/: test_tools.py
template/dungeon/algorithm/: canvas.py  grid.py
template/dungeon/brogue/: const.py  doors.py  levels.py
template/dungeon/brogue/rooms/: __init__.py  cavern.py  simple.py  utils.py
template/typings/: _carrotlib.pyi  box2d.pyi  imgui.pyi  raylib.pyi
